--- a/locales/en.yml
+++ b/locales/en.yml
@@ -31,10 +31,10 @@
     application_description: "A small DNS server to enable local domain resolution."
     application_help_configuration: "The configuration file to use. Default is \"~/.devdnsd_config\"."
     application_help_tld: "The TLD to handle. Default is \"dev\"."
-    application_help_port: "The port to bind. Default is 7771"
-    application_help_pid_file: "The PID file to use. Default: \"/var/run/devdnsd.pid\""
-    application_help_log_file: "The default log file. Not used if run in foreground. Default is \"/var/log/devdnsd.log\""
-    application_help_log_level: "The default log level. Valid values are from 0 to 5 where 0 means \"all messages\". Default is 1."
+    application_help_port: "The port to bind. Default is 7771."
+    application_help_pid_file: "The PID file to use. Default is \"/var/run/devdnsd.pid\"."
+    application_help_log_file: "The log file to use. Not used if run in foreground. Default is \"/var/log/devdnsd.log\"."
+    application_help_log_level: "The log level to use. Valid values are from 0 to 5 where 0 means \"all messages\". Default is 1."
     application_help_foreground: "Do not daemonize."
     application_meta_file: "FILE"
     application_meta_domain: "DOMAIN"
