Included functionalities of the old akaer gem.

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -38,11 +38,37 @@
     application_help_log_file: "The log file to use. Not used if run in foreground. Default is \"/var/log/devdnsd.log\"."
     application_help_log_level: "The log level to use. Valid values are from 0 to 5 where 0 means \"all messages\". Default is 1."
     application_help_foreground: "Do not daemonize."
+    application_help_interface: "The interface to manage. Default is \"lo0\"."
+    application_help_addresses: "The list of aliases to add. Overrides sequential list."
+    application_help_start_address: "The starting address for sequential aliases. Default is \"10.0.0.1\"."
+    application_help_aliases: "The number of aliases to add. Default is 5."
+    application_help_add_command: "The command to run for adding an alias. Default is \"sudo ifconfig {{interface}} alias {{address}}\"."
+    application_help_remove_command: "The command to run for removing an alias. Default is \"sudo ifconfig {{interface}} -alias {{address}}\"."
+    application_help_dry_run: "Only show which modifications will be done."
     application_meta_file: "FILE"
     application_meta_domain: "DOMAIN"
     application_meta_level: "LEVEL"
     application_meta_port: "PORT"
+    application_meta_interface: "INTERFACE"
+    application_meta_address: "ADDRESS"
+    application_meta_addresses: "ADDRESSES"
+    application_meta_aliases: "ALIASES"
+    application_meta_command: "COMMAND"
     command_start: "Starts the server."
     command_install: "Installs the server."
     command_uninstall: "Uninstalls the server."
     command_stop: "Stops the server."
+    command_aliases: "Adds or removes aliases to network interfaces."
+    command_add: "Adds aliases."
+    command_remove: "Removes aliases."
+    removing: "Removing"
+    adding: "Adding"
+    remove: "remove"
+    add: "add"
+    to: "to "
+    from: "from "
+    general_error: "Cannot {mark=bright}%1{/mark} address {mark=bright}%2{/mark} %3interface {mark=bright}%4{/mark}."
+    add_empty: "No valid addresses to add to the interface found."
+    remove_empty: "No valid addresses to remove from the interface found."
+    run: "%1 {mark=bright}%2{/mark} address {mark=bright}%3{/mark} %4interface {mark=bright}%5{/mark}..."
+    dry_run: "%1 I will {mark=bright}%2{/mark} address {mark=bright}%3{/mark} %4interface {mark=bright}%5{/mark}..."
