--- a/locales/it.yml
+++ b/locales/it.yml
@@ -38,11 +38,38 @@
     application_help_log_file: "Il file di log da utilizzare. Non usato se eseguito in foreground. Il valore predefinito è \"/var/log/devdnsd.log\"."
     application_help_log_level: "Il livello di log da utilizzare. I valori validi sono da 0 a 5 dove 0 significa \"tutti i messaggi\". Il valore predefinito è 1."
     application_help_foreground: "Non eseguire in background."
+    application_help_interface: "L'interfaccia da gestire. L'interfaccia predefinita è \"lo0\"."
+    application_help_addresses: "La lista di indirizzi da aggiungere. Sovrascrive la lista sequenziale."
+    application_help_start_address: "L'indirizzo iniziale per gli indirizzi sequenziali. L'indirizzo predefinito è \"10.0.0.1\"."
+    application_help_aliases: "Il numero di indirizzi da aggiungere. Il numero predefinito è 5."
+    application_help_add_command: "Il comando da eseguire per aggiungere un indirizzo. Il comando predefinito è \"sudo ifconfig {{interface}} alias {{address}}\"."
+    application_help_remove_command: "Il comando da eseguire per rimuovere un indirizzo. Il comando predefinito è \"sudo ifconfig {{interface}} -alias {{address}}\"."
+    application_help_dry_run: "Mostra solo quali modifiche sarebbero applicato"
+    application_help_quiet: "Non mostra alcun messaggio"
     application_meta_file: "FILE"
     application_meta_domain: "DOMINIO"
     application_meta_level: "LIVELLO"
     application_meta_port: "PORTA"
+    application_meta_interface: "INTERFACCIA"
+    application_meta_address: "INDIRIZZO"
+    application_meta_addresses: "INDIRIZZI"
+    application_meta_aliases: "ALIAS"
+    application_meta_command: "COMANDO"
     command_start: "Avvia server."
     command_install: "Installa il server."
     command_uninstall: "Disinstalla il server."
     command_stop: "Ferma il server."
+    command_aliases: "Aggiunge or rimuove indirizzi dalle interfacce di rete."
+    command_add: "Aggiungi indirizzi"
+    command_remove: "Rimuovi indirizzi."
+    removing: "Rimuovo"
+    adding: "Aggiungo"
+    remove: "rimuovere"
+    add: "aggiungere"
+    to: "all'"
+    from: "dall'"
+    general_error: "Impossibile {mark=bright}%1{/mark} l'indirizzo {mark=bright}%2{/mark} %3interfaccia {mark=bright}%4{/mark}."
+    add_empty: "Nessun indirizzo valido da aggiungere all'interfaccia trovato."
+    remove_empty: "Nessun indirizzo valido da rimuovere dall'interfaccia trovato."
+    run: "%1 {mark=bright}%2{/mark} l'indirizzo {mark=bright}%3{/mark} %4interfaccia {mark=bright}%5{/mark}..."
+    dry_run: "%1 Sto per {mark=bright}%2{/mark} l'indirizzo {mark=bright}%3{/mark} %4interfaccia {mark=bright}%5{/mark}..."
