--- a/locales/en.yml
+++ b/locales/en.yml
@@ -29,7 +29,8 @@
     agent_loading_error: "Cannot load the launch agent."
     agent_unloading: "Unloading the launch agent %1 ..."
     agent_unloading_error: "Cannot unload the launch agent."
-    logging_failed: "Cannot log to {mark=bright}%1{/mark}. Exiting..."
+    logging_failed: "Cannot log to {mark=bright}%1{/mark}. Logging to terminal..."
+    invalid_directory: "Cannot write on directory {mark=bright}%1{/mark}. Exiting..."
     application_description: "A small DNS server to enable local domain resolution."
     application_help_configuration: "The configuration file to use. Default is \"~/.devdnsd_config\"."
     application_help_tld: "The TLD to handle. Default is \"dev\"."
