--- a/locales/it.yml
+++ b/locales/it.yml
@@ -29,7 +29,8 @@
     agent_loading_error: "Impossibile avviare il launch agent."
     agent_unloading: "Fermo il launch agent %1 ..."
     agent_unloading_error: "Impossible fermare il launch agent."
-    logging_failed: "Impossibile eseguire il logging in {mark=bright}%1{/mark}. Esco..."
+    logging_failed: "Impossibile eseguire il logging in {mark=bright}%1{/mark}. Eseguo il logging nel terminale..."
+    invalid_directory: "Impossibile scrivere sulla directory {mark=bright}%1{/mark}. Esco..."
     application_description: "Un piccolo server DNS per abilitare la risoluzione di domini locali."
     application_help_configuration: "Il file di configurazione da usare. Il valore predefinito è \"~/.devdnsd_config\"."
     application_help_tld: "Il TLD da gestiere. Il valore predefinito è \"dev\"."
