Added new actions.

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -58,12 +58,19 @@
     application_meta_command: "COMMAND"
     application_create_config: "To execute devdnsd, please create the file {mark=bright}%1{/mark}. An empty file is sufficient."
     command_start: "Starts the server."
+    command_stop: "Stops the server."
+    command_restart: "Restarts the server."
+    command_status: "Shows the status of the server."
+    command_clean: "Cleans the system's DNS."
     command_install: "Installs the server."
     command_uninstall: "Uninstalls the server."
-    command_stop: "Stops the server."
     command_aliases: "Adds or removes aliases to network interfaces."
     command_add: "Adds aliases."
     command_remove: "Removes aliases."
+    status_running: "The server is running with process ID {mark=bright}%1{/mark}."
+    status_stopped: "The server is stopped."
+    status_crashed: "The server crashed. See the log for more information."
+    status_unknown: "The server status is unknown."
     removing: "Removing"
     adding: "Adding"
     remove: "remove"
