--- a/locales/it.yml
+++ b/locales/it.yml
@@ -59,12 +59,19 @@
     application_meta_command: "COMANDO"
     application_create_config: "Per eseguire devdnsd, per favore crea il file {mark=bright}%1{/mark}. Un file vuoto è sufficiente."
     command_start: "Avvia server."
+    command_stop: "Ferma il server."
+    command_restart: "Riavvia server."
+    command_status: "Mostra lo status del server."
+    command_clean: "Pulisce la cache DNS del sistema."
     command_install: "Installa il server."
     command_uninstall: "Disinstalla il server."
-    command_stop: "Ferma il server."
     command_aliases: "Aggiunge or rimuove indirizzi dalle interfacce di rete."
     command_add: "Aggiungi indirizzi"
     command_remove: "Rimuovi indirizzi."
+    status_running: "Il server è in esecuzione con ID processo {mark=bright}%1{/mark}."
+    status_stopped: "Il server è stato fermato."
+    status_crashed: "Il server è terminato con errori. Guarda il log per maggiori informazioni."
+    status_unknown: "Lo status del server è sconosciuto."
     removing: "Rimuovo"
     adding: "Aggiungo"
     remove: "rimuovere"
