Refactored, updated dependencies and linted code.

--- a/locales/it.yml
+++ b/locales/it.yml
@@ -5,33 +5,34 @@
 #
 
 ---
+it:
   devdnsd:
     rule_invalid_call: "Devi specificare almeno una regola e un host (anche tramite un blocco). Opzionalmente puoi aggiungere un tipo di record (default: A) e le opzioni."
     rule_invalid_options: "Puoi usare solo hash per le opzioni."
-    rule_invalid_resource: "Classe di risorsa %1 non valida."
+    rule_invalid_resource: "Classe di risorsa %s non valida."
     no_jruby: "DevDNSd non è disponibile per JRuby."
     no_fork: "Il forking non è disponibile per questa piattaforma. Eseguo foreground ..."
     dns_update: "Cancello la cache dei DNS e dei resolver ..."
     starting: "Avvio DevDNSd ..."
-    match: "Trovata corrispondenza per %1 con tipo %2."
-    reply: "La risposta è %1 con tipo %2."
+    match: "Trovata corrispondenza per %s con tipo %s."
+    reply: "La risposta è %s con tipo %s."
     no_reply: "Nessuna risposta trovata."
     no_agent: "Installare DevDNSd come resolver locale è disponibile solo su MacOSX."
     admin_privileges_warning: "In base alla tua configurazione, il sistema potrebbe chiederti fino a due volte di garantire all'applicazione {mark=bright}osascript{/mark} i privilegi di amministratore."
-    resolver_creating: "Creo il resolver in {mark=bright}%1{/mark} ..."
+    resolver_creating: "Creo il resolver in {mark=bright}%s{/mark} ..."
     resolver_creating_error: "Impossible creare il file del resolver."
-    resolver_deleting: "Cancello resolver %1 ..."
+    resolver_deleting: "Cancello resolver %s ..."
     resolver_deleting_error: "Impossibile cancellare il file del resolver."
-    agent_creating: "Creo il launch agent in {mark=bright}%1{/mark} ..."
+    agent_creating: "Creo il launch agent in {mark=bright}%s{/mark} ..."
     agent_creating_error: "Impossibile creare il launch agent."
-    agent_deleting: "Cancello il launch agent %1 ..."
+    agent_deleting: "Cancello il launch agent %s ..."
     agent_deleting_error: "Impossibile cancellare launch agent."
-    agent_loading: "Avvio il launch agent %1 ..."
+    agent_loading: "Avvio il launch agent %s ..."
     agent_loading_error: "Impossibile avviare il launch agent."
-    agent_unloading: "Fermo il launch agent %1 ..."
+    agent_unloading: "Fermo il launch agent %s ..."
     agent_unloading_error: "Impossible fermare il launch agent."
-    logging_failed: "Impossibile eseguire il logging in {mark=bright}%1{/mark}. Eseguo il logging nel terminale..."
-    invalid_directory: "Impossibile scrivere sulla directory {mark=bright}%1{/mark}. Esco..."
+    logging_failed: "Impossibile eseguire il logging in {mark=bright}%s{/mark}. Eseguo il logging nel terminale..."
+    invalid_directory: "Impossibile scrivere sulla directory {mark=bright}%s{/mark}. Esco..."
     application_description: "Un piccolo server DNS per abilitare la risoluzione di domini locali."
     application_help_configuration: "Il file di configurazione da usare. Il valore predefinito è \"~/.devdnsd_config\"."
     application_help_tld: "Il TLD da gestiere. Il valore predefinito è \"dev\"."
@@ -57,7 +58,7 @@
     application_meta_addresses: "INDIRIZZI"
     application_meta_aliases: "ALIAS"
     application_meta_command: "COMANDO"
-    application_create_config: "Per eseguire devdnsd, per favore crea il file {mark=bright}%1{/mark}. Un file vuoto è sufficiente."
+    application_create_config: "Per eseguire devdnsd, per favore crea il file {mark=bright}%s{/mark}. Un file vuoto è sufficiente."
     command_start: "Avvia server."
     command_stop: "Ferma il server."
     command_restart: "Riavvia server."
@@ -68,7 +69,7 @@
     command_aliases: "Aggiunge or rimuove indirizzi dalle interfacce di rete."
     command_add: "Aggiungi indirizzi"
     command_remove: "Rimuovi indirizzi."
-    status_running: "Il server è in esecuzione con ID processo {mark=bright}%1{/mark}."
+    status_running: "Il server è in esecuzione con ID processo {mark=bright}%s{/mark}."
     status_stopped: "Il server è stato fermato."
     status_crashed: "Il server è terminato con errori. Guarda il log per maggiori informazioni."
     status_unknown: "Lo status del server è sconosciuto."
@@ -78,8 +79,8 @@
     add: "aggiungere"
     to: "all'"
     from: "dall'"
-    general_error: "Impossibile {mark=bright}%1{/mark} l'indirizzo {mark=bright}%2{/mark} %3interfaccia {mark=bright}%4{/mark}."
+    general_error: "Impossibile {mark=bright}%s{/mark} l'indirizzo {mark=bright}%s{/mark} %sinterfaccia {mark=bright}%s{/mark}."
     add_empty: "Nessun indirizzo valido da aggiungere all'interfaccia trovato."
     remove_empty: "Nessun indirizzo valido da rimuovere dall'interfaccia trovato."
-    run: "%1 {mark=bright}%2{/mark} l'indirizzo {mark=bright}%3{/mark} %4interfaccia {mark=bright}%5{/mark}..."
-    dry_run: "%1 Sto per {mark=bright}%2{/mark} l'indirizzo {mark=bright}%3{/mark} %4interfaccia {mark=bright}%5{/mark}..."
+    run: "%s {mark=bright}%s{/mark} l'indirizzo {mark=bright}%s{/mark} %sinterfaccia {mark=bright}%s{/mark}..."
+    dry_run: "%s Sto per {mark=bright}%s{/mark} l'indirizzo {mark=bright}%s{/mark} %sinterfaccia {mark=bright}%s{/mark}..."
