--- a/locales/en.yml
+++ b/locales/en.yml
@@ -5,33 +5,34 @@
 #
 
 ---
+en:
   devdnsd:
     rule_invalid_call: "You must specify at least a rule and a host (also via a block). Optionally you can add a record type (default: A) and the options."
     rule_invalid_options: "You can only use hashs for options."
-    rule_invalid_resource: "Invalid resource class %1."
+    rule_invalid_resource: "Invalid resource class %s."
     dns_update: "Flushing DNS cache and resolvers ..."
     no_jruby: "DevDNSd is not available on JRuby."
     no_fork: "Forking is not available for this platform. Running in foreground ..."
     starting: "Starting DevDNSd ..."
-    match: "Found match on %1 with type %2."
-    reply: "Reply is %1 with type %2."
+    match: "Found match on %s with type %s."
+    reply: "Reply is %s with type %s."
     no_reply: "No reply found."
     no_agent: "Install DevDNSd as a local resolver is only available on MacOSX."
     admin_privileges_warning: "Basing on your setup, the system might ask you up to twice to grant {mark=bright}osascript{/mark} application admin privileges."
-    resolver_creating: "Creating the resolver in {mark=bright}%1{/mark} ..."
+    resolver_creating: "Creating the resolver in {mark=bright}%s{/mark} ..."
     resolver_creating_error: "Cannot create the resolver file."
-    resolver_deleting: "Deleting the resolver %1 ..."
+    resolver_deleting: "Deleting the resolver %s ..."
     resolver_deleting_error: "Cannot delete the resolver file."
-    agent_creating: "Creating the launch agent in {mark=bright}%1{/mark} ..."
+    agent_creating: "Creating the launch agent in {mark=bright}%s{/mark} ..."
     agent_creating_error: "Cannot create the launch agent."
-    agent_deleting: "Deleting the launch agent %1 ..."
+    agent_deleting: "Deleting the launch agent %s ..."
     agent_deleting_error: "Cannot delete the launch agent."
-    agent_loading: "Loading the launch agent %1 ..."
+    agent_loading: "Loading the launch agent %s ..."
     agent_loading_error: "Cannot load the launch agent."
-    agent_unloading: "Unloading the launch agent %1 ..."
+    agent_unloading: "Unloading the launch agent %s ..."
     agent_unloading_error: "Cannot unload the launch agent."
-    logging_failed: "Cannot log to {mark=bright}%1{/mark}. Logging to terminal..."
-    invalid_directory: "Cannot write on directory {mark=bright}%1{/mark}. Exiting..."
+    logging_failed: "Cannot log to {mark=bright}%s{/mark}. Logging to terminal..."
+    invalid_directory: "Cannot write on directory {mark=bright}%s{/mark}. Exiting..."
     application_description: "A small DNS server to enable local domain resolution."
     application_help_configuration: "The configuration file to use. Default is \"~/.devdnsd_config\"."
     application_help_tld: "The TLD to handle. Default is \"dev\"."
@@ -56,7 +57,7 @@
     application_meta_addresses: "ADDRESSES"
     application_meta_aliases: "ALIASES"
     application_meta_command: "COMMAND"
-    application_create_config: "To execute devdnsd, please create the file {mark=bright}%1{/mark}. An empty file is sufficient."
+    application_create_config: "To execute devdnsd, please create the file {mark=bright}%s{/mark}. An empty file is sufficient."
     command_start: "Starts the server."
     command_stop: "Stops the server."
     command_restart: "Restarts the server."
@@ -67,7 +68,7 @@
     command_aliases: "Adds or removes aliases to network interfaces."
     command_add: "Adds aliases."
     command_remove: "Removes aliases."
-    status_running: "The server is running with process ID {mark=bright}%1{/mark}."
+    status_running: "The server is running with process ID {mark=bright}%s{/mark}."
     status_stopped: "The server is stopped."
     status_crashed: "The server crashed. See the log for more information."
     status_unknown: "The server status is unknown."
@@ -77,8 +78,8 @@
     add: "add"
     to: "to "
     from: "from "
-    general_error: "Cannot {mark=bright}%1{/mark} address {mark=bright}%2{/mark} %3interface {mark=bright}%4{/mark}."
+    general_error: "Cannot {mark=bright}%s{/mark} address {mark=bright}%s{/mark} %sinterface {mark=bright}%s{/mark}."
     add_empty: "No valid addresses to add to the interface found."
     remove_empty: "No valid addresses to remove from the interface found."
-    run: "%1 {mark=bright}%2{/mark} address {mark=bright}%3{/mark} %4interface {mark=bright}%5{/mark}..."
-    dry_run: "%1 I will {mark=bright}%2{/mark} address {mark=bright}%3{/mark} %4interface {mark=bright}%5{/mark}..."
+    run: "%s {mark=bright}%s{/mark} address {mark=bright}%s{/mark} %sinterface {mark=bright}%s{/mark}..."
+    dry_run: "%s I will {mark=bright}%s{/mark} address {mark=bright}%s{/mark} %sinterface {mark=bright}%s{/mark}..."
